Kubernetes/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: swigy-frontend
  labels:
    app: swigy-frontend
spec:
  serviceName: swigy-frontend-service
  replicas: 1
  selector:
    matchLabels:
      app: swigy-frontend
  template:
    metadata:
      labels:
        app: swigy-frontend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: swigy-frontend
          image: manoj3003/swigy:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: volume1
              mountPath: /opt/backend
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: volume1
          persistentVolumeClaim:
            claimName: efs-pvc
