Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swigy-frontend-service
  labels:
    app: swigy-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: swigy-frontend
